WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281909
[GTK][WPE][Skia] Fix assertion when drawing filters with a zero sourceImage in DisplayList mode
https://bugs.webkit.org/show_bug.cgi?id=281909
Summary
[GTK][WPE][Skia] Fix assertion when drawing filters with a zero sourceImage i...
Nikolas Zimmermann
Reported
2024-10-22 09:22:13 PDT
applyFilteredImageBufferItem() contains a wrong assertion that a sourceImageIdentifier must always be present -- however there are legitimate use-cases in SVG when a sourceImage is a nullptr - handle that.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2024-10-22 09:23:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35576
Nikolas Zimmermann
Comment 2
2024-10-22 14:08:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34502
EWS
Comment 3
2024-10-23 13:39:42 PDT
Committed
285619@main
(21ef355cc671): <
https://commits.webkit.org/285619@main
> Reviewed commits have been landed. Closing PR #35576 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug