Cherry-pick 285619@main (21ef355cc671). https://bugs.webkit.org/show_bug.cgi?id=281909

[GTK][WPE][Skia] Fix assertion when drawing filters with a zero sourceImage in DisplayList mode
    https://bugs.webkit.org/show_bug.cgi?id=281909

    Reviewed by Alejandro G. Castro.

    applyFilteredImageBufferItem() contains a wrong assertion that a
    sourceImageIdentifier must always be present -- however there are
    legitimate use-cases in SVG when a sourceImage is a nullptr - handle that.

    Covered by existings tests, when using multi-threaded CPU rendering.

    * Source/WebCore/platform/graphics/displaylists/DisplayListItem.cpp:
    (WebCore::DisplayList::applyFilteredImageBufferItem):

    Canonical link: https://commits.webkit.org/285619@main

Canonical link: https://commits.webkit.org/282416.233@webkitglib/2.46